# mysite_django_tutorial

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
mysite/: settings.py  urls.py
polls/: admin.py  models.py  tests.py  urls.py  urls_old.py  views.py  views_old.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: detail.html
